--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@ download=30
 
 [API]
 url = https://inforcomp.com.br/integrations/endpoint/public
+file=https://www.inforcomp.com.br/cadastro/files/
+iface=http://localhost:6600
 
 [AUTH]
 email = controladora1@app.com
@@ -10,8 +12,8 @@ password = 123
 
 [CUSTOMER]
 code=703
-company=1
-branch=001
+company=2
+branch=003
 
 
 [CONSTRUCTION]
