Logs Feito e realizados augus testes

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,11 @@
 [SETTINGS]
 download=3
-delete_logs=5
+upload=15
+logs_search=7
+delete_logs=1
+typesaccepted=FACE
+
+
 
 [API]
 url = https://inforcomp.com.br/integrations/endpoint/public
@@ -15,6 +20,7 @@ password = 123
 code=703
 company=2
 branch=003
+
 
 
 [CONSTRUCTION]
